# agentpass-sdk

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  analyze_missed_samples.py  bypass_test_result.json  compute_reputation.py  compute_reputation_simple.py  demo.http  demo_4step.ps1  docker-compose.yml  main.py  optimized_prompt_defense.py  pyproject.toml  requirements.txt  reset_trust.ps1  start_feishu.ps1  test_alert.py  test_dlp.py  test_intro.py  test_pd_audit.py  test_prompt_defense_10k.py  test_results.json  验收清单.md
.github/workflows/: ci.yml
app/: __init__.py  audit.py  auth.py  config.py  database.py  db.py  dependencies.py  identity.py  middleware.py  models.py  permission.py  policy.py  repository.py  schemas.py  ws.py
app/adapters/: __init__.py  agentpass_adapter.py
app/approval/: __init__.py  engine.py
app/connectors/: __init__.py  base.py  chatgpt.py  claude.py  deepseek.py  doubao.py  ernie.py  feishu.py  gemini.py  grok.py  kimi.py  mock.py  qwen.py
docs/: adr.md
examples/: app.py
frontend/: api.js  app.js  audit.html  audit.js  chain.html  chain.js  command-center.js  feishu-section.js  feishu.html  feishu.js  gateway.html  governance.html  governance.js  iam-explain.js  index.html  mode.js  package.json  render.js  risk.html  risk.js  scenarios.js  state.js  styles.css  trust.html  trust.js  tsconfig.json  utils.js  v22.html  v22.js  vite.config.ts
scripts/: attack_bypass_test.py
tests/: run_tests.py  test_api_verification.py  test_demo.py  test_permissions_audit.py  test_sdk_verification.py
(+86 files in other folders)
